--- a/navidrome.service
+++ b/navidrome.service
@@ -33,7 +33,7 @@ RestrictAddressFamilies=AF_UNIX AF_INET AF_INET6
 RestrictNamespaces=yes
 RestrictRealtime=yes
 SystemCallFilter=@system-service
-SystemCallFilter=~@privileged @resources
+SystemCallFilter=~@privileged
 SystemCallArchitectures=native
 UMask=0066
 
