--- a/isso.service
+++ b/isso.service
@@ -3,7 +3,7 @@ Description=Isso Comment Server
 After=network.target network-online.target nss-lookup.target
 
 [Service]
-Environment="ISSO_SETTINGS=/etc/isso.conf"
+Environment="ISSO_SETTINGS=/etc/isso.cfg"
 ExecStart=/usr/bin/isso run
 
 [Install]
