--- a/deskreen.desktop
+++ b/deskreen.desktop
@@ -3,9 +3,9 @@ Version=1.0
 Type=Application
 Name=Deskreen
 Comment=Deskreen turns any device into a secondary screen for your computer
-Categories=Development;
-Keywords=Deskreen;screen;display;share;
+Categories=Utility;
+Keywords=display;screen;share;
 Exec=deskreen
-Icon=deskreen
+Icon=/opt/deskreen/icon.png
 Terminal=false
 StartupNotify=true
