Update to v0.3.1 and fix dependencies

--- a/maubot.service
+++ b/maubot.service
@@ -6,8 +6,7 @@ Type=simple
 User=maubot
 Group=maubot
 WorkingDirectory=/var/lib/maubot/
-ExecStart=/usr/bin/maubot -c /etc/synapse/maubot/config.yaml \
-          -r /etc/synapse/maubot/registration.yaml
+ExecStart=/bin/python -m maubot -c /etc/maubot/config.yaml
 Restart=always
 RestartSec=3
 
