--- a/deskreen.desktop
+++ b/deskreen.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Type=Application
 Name=Deskreen
 Comment=Deskreen turns any device into a secondary screen for your computer
-Categories=Utility;
+Categories=Development;Utility;
 Keywords=display;screen;share;
 Exec=deskreen
 Icon=/opt/deskreen/icon.png
