--- a/tmpfiles-maubot.conf
+++ b/tmpfiles-maubot.conf
@@ -1,5 +1,6 @@
-d /var/lib/maubot 0740 maubot maubot -
-d /var/lib/maubot/logs 0740 maubot maubot -
-d /var/lib/maubot/plugins 0740 maubot maubot -
-d /var/lib/maubot/trash 0740 maubot maubot -
-f /etc/maubot.yaml 0640 maubot maubot -
+d /var/lib/maubot 0700 maubot maubot -
+d /var/lib/maubot/logs 0700 maubot maubot -
+d /var/lib/maubot/plugins 0700 maubot maubot -
+d /var/lib/maubot/trash 0700 maubot maubot -
+d /etc/maubot 0700 maubot maubot -
+f /etc/maubot/config.yaml 0600 maubot maubot -
