--- a/sliding-sync-git.service
+++ b/sliding-sync-git.service
@@ -9,6 +9,7 @@ Group=synapse
 EnvironmentFile=/etc/default/sliding-sync
 Restart=always
 RestartSec=3
+ExecStart=/usr/bin/syncv3
 
 [Install]
 WantedBy=multi-user.target synapse.target
