--- a/frame-eth-git.desktop
+++ b/frame-eth-git.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Frame
 Comment=System-wide Web3 for macOS, Windows and Linux
-Exec=/usr/bin/frame %U
+Exec=/usr/bin/frame-eth %U
 Terminal=false
 Type=Application
 Icon=frame
