Remove .svg extension for Icon in desktop files

--- a/JFlashExe.desktop
+++ b/JFlashExe.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JFlashExe
 Comment=Segger flashing utility for Linux
 Exec=/usr/bin/JFlashExe
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
