--- a/JFlashLiteExe.desktop
+++ b/JFlashLiteExe.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JFlashLiteExe
 Comment=Segger flashing utility (lite) for Linux
 Exec=/usr/bin/JFlashLiteExe
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
