--- a/JFlashSPIExe.desktop
+++ b/JFlashSPIExe.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JFlashSPIExe
 Comment=Segger flashing utility for Linux
 Exec=/usr/bin/JFlashSPIExe
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
