--- a/JFlashSPI_CL.desktop
+++ b/JFlashSPI_CL.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JFlashSPI_CL
 Comment=Segger SPI flasher for Linux
 Exec=/usr/bin/JFlashSPI_CL
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
