--- a/JLinkConfigExe.desktop
+++ b/JLinkConfigExe.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JLinkConfigExe
 Comment=Segger JLinkConfigExe for Linux
 Exec=/usr/bin/JLinkConfigExe
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
