--- a/JLinkExe.desktop
+++ b/JLinkExe.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JLinkExe
 Comment=Segger JLinkExe for Linux
 Exec=/usr/bin/JLinkExe
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
