--- a/JLinkGDBServer.desktop
+++ b/JLinkGDBServer.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JLinkGDBServer
 Comment=Segger GDB server for Linux
 Exec=/usr/bin/JLinkGDBServer
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
