--- a/JLinkRTTLogger.desktop
+++ b/JLinkRTTLogger.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JLinkRTTLogger
 Comment=Segger RTT Logger for Linux
 Exec=/usr/bin/JLinkRTTLogger
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
