--- a/JLinkRemoteServer.desktop
+++ b/JLinkRemoteServer.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JLinkRemoteServer
 Comment=Segger remote server for Linux
 Exec=/usr/bin/JLinkRemoteServer
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
