--- a/JLinkSTM32.desktop
+++ b/JLinkSTM32.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JLinkSTM32
 Comment=Segger JLinkSTM32 for Linux
 Exec=/usr/bin/JLinkSTM32
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
