--- a/JLinkSWOViewerExe.desktop
+++ b/JLinkSWOViewerExe.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JLinkSWOViewerExe
 Comment=Segger JLinkSWOViewerExe for Linux
 Exec=/usr/bin/JLinkSWOViewerExe
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
