--- a/JMemExe.desktop
+++ b/JMemExe.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JMemExe
 Comment=Segger JMemExe for Linux
 Exec=/usr/bin/JMemExe
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
