--- a/JRunExe.desktop
+++ b/JRunExe.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JRunExe
 Comment=Segger JRunExe for Linux
 Exec=/usr/bin/JRunExe
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
