--- a/JTAGLoadExe.desktop
+++ b/JTAGLoadExe.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JTAGLoadExe
 Comment=Segger JTAGLoadExe for Linux
 Exec=/usr/bin/JTAGLoadExe
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
