--- a/JLinkGUIServerExe.desktop
+++ b/JLinkGUIServerExe.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JLinkGUIServerExe
 Comment=Segger JLinkGUIServerExe for Linux
 Exec=/usr/bin/JLinkGUIServerExe
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
