--- a/JLinkLicenseManager.desktop
+++ b/JLinkLicenseManager.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JLinkLicenseManager
 Comment=Segger Jlink license manager for Linux
 Exec=/usr/bin/JLinkLicenseManager
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
