--- a/JLinkRTTClient.desktop
+++ b/JLinkRTTClient.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JLinkRTTClient
 Comment=Segger RTT Client for Linux
 Exec=/usr/bin/JLinkRTTClient
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
