--- a/JLinkRTTViewer.desktop
+++ b/JLinkRTTViewer.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JLinkRTTViewer
 Comment=Segger RTT Viewer for Linux
 Exec=/usr/bin/JLinkRTTViewerExe
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
