--- a/JLinkRegistration.desktop
+++ b/JLinkRegistration.desktop
@@ -4,7 +4,7 @@ Type=Application
 Name=Segger JLinkRegistration
 Comment=Segger Jlink probe registration for Linux
 Exec=/usr/bin/JLinkRegistration
-Icon=JLink.svg
+Icon=JLink
 Terminal=false
 StartupNotify=false
 Categories=Development
