--- a/nbtexplorer.desktop
+++ b/nbtexplorer.desktop
@@ -6,4 +6,4 @@ Exec=/usr/bin/nbtexplorer %F
 Icon=/usr/share/pixmaps/nbtexplorer.png
 Terminal=false
 Type=Application
-Categories=Game;
+Categories=Utility;FileTools;
