--- a/assaultcube.desktop
+++ b/assaultcube.desktop
@@ -6,5 +6,5 @@ Terminal=false
 Name=AssaultCube
 GenericName=First Person Shooter Game
 StartupNotify=false
-Categories=Game;ActionGame;Shooterl
+Categories=Game;ActionGame;Shooter;
 Comment=AssaultCube is a FREE, multiplayer, first-person shooter game, based on the CUBE engine.
