--- a/tmpfilesd.conf
+++ b/tmpfilesd.conf
@@ -1,2 +1,8 @@
+# Guest Accounts
+d /etc/nitter 0700 nitter
+f /etc/nitter/guest_accounts.json 0600 nitter -
+L /usr/share/nitter/guest_accounts.json - - - - /etc/nitter/guest_accounts.json
+# Configuration
 f /etc/nitter.conf 0600 nitter root
+# Cache
 d /var/cache/nitter 0750 root root
