--- a/notesnook.desktop
+++ b/notesnook.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Notesnook
-Exec=/opt/notesnook/notesnook %U
+Exec=notesnook %U
 Terminal=false
 Type=Application
 Icon=notesnook
@@ -12,12 +12,12 @@ Actions=new-note;new-notebook;new-reminder;
 
 [Desktop Action new-note]
 Name=New note
-Exec=/opt/notesnook/notesnook %U new note
+Exec=notesnook %U new note
 
 [Desktop Action new-notebook]
 Name=New notebook
-Exec=/opt/notesnook/notesnook %U new notebook
+Exec=notesnook %U new notebook
 
 [Desktop Action new-reminder]
 Name=New reminder
-Exec=/opt/notesnook/notesnook %U new reminder
+Exec=notesnook %U new reminder
