Align PKGBUILD with Rust package guidelines
This also adds the example config to the repository, because Agatha's
servers might not be reachable at any time. Checked that the package
now compiles as intended inside a chroot environment.

See: https://wiki.archlinux.org/title/Rust_package_guidelines

--- a/url-eater.service
+++ b/url-eater.service
@@ -1,7 +1,7 @@
 [Unit]
-Description=url-eater
-After=default.target
-#Before=network.target
+Description=Clipboard URL cleanup service
+Documentation=https://github.com/AgathaSorceress/url-eater
+After=graphical-session-pre.target
 
 [Service]
 Type=simple
@@ -9,4 +9,4 @@ ExecStart=/usr/bin/url-eater /etc/url-eater.kdl
 Restart=on-failure
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=graphical-session.target
