update to 1.74.0 and improvements to the build

--- a/immich.conf
+++ b/immich.conf
@@ -34,7 +34,7 @@ UPLOAD_LOCATION=/var/lib/immich/upload
 ###################################################################################
 # Typesense
 ###################################################################################
-TYPESENSE_API_KEY=
+#TYPESENSE_API_KEY=
 TYPESENSE_ENABLED=false
 
 ###################################################################################
