upgrade to 1.75.0 and added tmpfiles for folders

--- a/immich.conf
+++ b/immich.conf
@@ -24,12 +24,16 @@ REDIS_SOCKET=/run/redis/redis.sock
 
 ###################################################################################
 # Upload File Location
-#
 # This is the location where uploaded files are stored.
 ###################################################################################
 
 UPLOAD_LOCATION=/var/lib/immich/upload
 
+###################################################################################
+# Machine Learning
+###################################################################################
+
+IMMICH_MACHINE_LEARNING_ENABLED=false
 
 ###################################################################################
 # Typesense
@@ -73,6 +77,7 @@ PUBLIC_LOGIN_PAGE_MESSAGE=
 # IMMICH_WEB_URL=http://immich-web:3000
 # IMMICH_SERVER_URL=http://immich-server:3001
 # IMMICH_MACHINE_LEARNING_URL=http://immich-machine-learning:3003
+# PUBLIC_IMMICH_SERVER_URL=http://immich-server:3001
 
 ####################################################################################
 # Alternative API's External Address - Optional
@@ -84,3 +89,11 @@ PUBLIC_LOGIN_PAGE_MESSAGE=
 ####################################################################################
 
 #IMMICH_API_URL_EXTERNAL=http://localhost:3001
+
+
+####################################################################################
+# Debug
+####################################################################################
+
+#LOG_LEVEL=debug
+# Log Level (verbose, debug, log, warn, error)
