pkgrel v5: new revision
* $backup: list config files
* $groups: remove from base-devel
* build(): change --prefix to '/usr'
* build(): change --sbindir to '/usr/bin'
* kannel.conf: add wapbox related params

--- a/kannel-bearerbox.service
+++ b/kannel-bearerbox.service
@@ -5,9 +5,9 @@ After = network.target
 [Service]
 User = kannel
 PIDFile = /run/kannel/bearerbox.pid
-ExecStart = /usr/local/sbin/start-stop-daemon --start \
+ExecStart = /usr/bin/start-stop-daemon --start \
               --pidfile /run/kannel/bearerbox.pid \
-              --exec /usr/local/sbin/bearerbox /etc/kannel/kannel.conf
+              --exec /usr/bin/bearerbox /etc/kannel/kannel.conf
 
 [Install]
 WantedBy = multi-user.target
