--- a/kannel.conf
+++ b/kannel.conf
@@ -22,6 +22,8 @@ include = "/etc/kannel/modems.conf"
 group = core
 admin-port = 13000
 smsbox-port = 13001
+wapbox-port = 13002
+wdp-interface-name = "0.0.0.0"
 admin-password = password
 status-password = password
 admin-deny-ip = "*.*.*.*"
@@ -123,3 +125,9 @@ accepted-smsc = usb0-modem
 # don't send a reply here (it'll come through sendsms):
 max-messages = 0
 get-url = http://127.0.0.1:8000/backend/kannel-usb0-smsc/?id=%p&text=%a&charset=%C&coding=%c
+
+#---------------------------------------------
+# WAPBOX SETUP
+
+group = wapbox
+bearerbox-host = 127.0.0.1
