--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# uClibc-ng 1.0.31 C Library Configuration
+# uClibc-ng 1.0.41 C Library Configuration
 #
 # TARGET_aarch64 is not set
 # TARGET_alpha is not set
@@ -16,6 +16,7 @@
 # TARGET_hppa is not set
 # TARGET_i386 is not set
 # TARGET_ia64 is not set
+# TARGET_kvx is not set
 # TARGET_lm32 is not set
 # TARGET_m68k is not set
 # TARGET_metag is not set
@@ -25,74 +26,53 @@
 # TARGET_nios2 is not set
 # TARGET_or1k is not set
 # TARGET_powerpc is not set
-# TARGET_riscv64 is not set
+TARGET_riscv64=y
 # TARGET_sh is not set
 # TARGET_sparc is not set
 # TARGET_sparc64 is not set
 # TARGET_tile is not set
-TARGET_x86_64=y
+# TARGET_x86_64 is not set
 # TARGET_xtensa is not set
 
 #
 # Target Architecture Features and Options
 #
-TARGET_ARCH="x86_64"
+TARGET_ARCH="riscv64"
 FORCE_OPTIONS_FOR_ARCH=y
 TARGET_SUBARCH=""
-
-#
-# Using ELF file format
-#
-ARCH_HAS_DEPRECATED_SYSCALLS=y
+UCLIBC_FORMAT_FLAT=y
+# UCLIBC_FORMAT_FLAT_SEP_DATA is not set
+# UCLIBC_FORMAT_SHARED_FLAT is not set
 ARCH_LITTLE_ENDIAN=y
 
 #
 # Using Little Endian
 #
 ARCH_HAS_MMU=y
-ARCH_USE_MMU=y
+# ARCH_USE_MMU is not set
 UCLIBC_HAS_FLOATS=y
 UCLIBC_HAS_FPU=y
 # DO_C99_MATH is not set
 # DO_XSI_MATH is not set
-# UCLIBC_HAS_FENV is not set
-KERNEL_HEADERS="/usr/include/"
+KERNEL_HEADERS="/usr/riscv64-linux-gnu/include"
+UCLIBC_UCLINUX_BROKEN_MUNMAP=y
 HAVE_DOT_CONFIG=y
 
 #
 # General Library Settings
 #
 DOPIC=y
-ARCH_HAS_UCONTEXT=y
-HAVE_SHARED=y
-# FORCE_SHAREABLE_TEXT_SEGMENTS is not set
-LDSO_LDD_SUPPORT=y
-LDSO_CACHE_SUPPORT=y
-LDSO_PRELOAD_ENV_SUPPORT=y
-# LDSO_PRELOAD_FILE_SUPPORT is not set
-LDSO_BASE_FILENAME="ld.so"
-# LDSO_STANDALONE_SUPPORT is not set
-# LDSO_PRELINK_SUPPORT is not set
-UCLIBC_STATIC_LDCONFIG=y
-LDSO_RUNPATH=y
-# LDSO_RUNPATH_OF_EXECUTABLE is not set
-LDSO_SAFE_RUNPATH=y
-LDSO_SEARCH_INTERP_PATH=y
-LDSO_LD_LIBRARY_PATH=y
-UCLIBC_CTOR_DTOR=y
-# LDSO_GNU_HASH_SUPPORT is not set
+ARCH_HAS_NO_SHARED=y
+ARCH_HAS_NO_LDSO=y
 HAS_NO_THREADS=y
-# UCLIBC_HAS_LINUXTHREADS is not set
-# UCLIBC_HAS_THREADS_NATIVE is not set
 UCLIBC_HAS_SYSLOG=y
 UCLIBC_HAS_LFS=y
-# MALLOC is not set
+MALLOC=y
 # MALLOC_SIMPLE is not set
-MALLOC_STANDARD=y
 UCLIBC_DYNAMIC_ATEXIT=y
 # UCLIBC_HAS_UTMPX is not set
 # UCLIBC_SUSV2_LEGACY is not set
-# UCLIBC_SUSV3_LEGACY is not set
+UCLIBC_SUSV3_LEGACY=y
 # UCLIBC_SUSV3_LEGACY_MACROS is not set
 # UCLIBC_SUSV4_LEGACY is not set
 # UCLIBC_STRICT_HEADERS is not set
@@ -126,6 +106,7 @@ UCLIBC_HAS_GNU_ERROR=y
 UCLIBC_BSD_SPECIFIC=y
 UCLIBC_HAS_BSD_ERR=y
 # UCLIBC_HAS_OBSOLETE_BSD_SIGNAL is not set
+# UCLIBC_HAS_BSD_B64_NTOP_B64_PTON is not set
 # UCLIBC_HAS_OBSOLETE_SYSV_SIGNAL is not set
 # UCLIBC_NTP_LEGACY is not set
 # UCLIBC_SV4_DEPRECATED is not set
@@ -147,6 +128,10 @@ UCLIBC_HAS_IPV4=y
 UCLIBC_HAS_COMPAT_RES_STATE=y
 # UCLIBC_HAS_EXTRA_COMPAT_RES_STATE is not set
 # UCLIBC_HAS_RESOLVER_SUPPORT is not set
+# UCLIBC_DNSRAND_MODE_URANDOM is not set
+# UCLIBC_DNSRAND_MODE_CLOCK is not set
+UCLIBC_DNSRAND_MODE_PRNGPLUS=y
+# UCLIBC_DNSRAND_MODE_SIMPLECOUNTER is not set
 
 #
 # String and Stdio Support
@@ -208,8 +193,8 @@ UCLIBC_HAS_GLOB=y
 #
 # Library Installation Options
 #
-RUNTIME_PREFIX="/"
-DEVEL_PREFIX="/usr/lib/uClibc/"
+RUNTIME_PREFIX="/usr/$(TARGET_ARCH)-linux-uclibc/"
+DEVEL_PREFIX="/usr/$(TARGET_ARCH)-linux-uclibc/usr/"
 MULTILIB_DIR="lib"
 HARDWIRED_ABSPATH=y
 
@@ -217,8 +202,6 @@ HARDWIRED_ABSPATH=y
 # Security options
 #
 # UCLIBC_HAS_SSP is not set
-UCLIBC_BUILD_RELRO=y
-# UCLIBC_BUILD_NOW is not set
 UCLIBC_BUILD_NOEXECSTACK=y
 
 #
@@ -229,9 +212,6 @@ UCLIBC_EXTRA_CFLAGS=""
 # DODEBUG is not set
 DOSTRIP=y
 # DOASSERTS is not set
-# SUPPORT_LD_DEBUG is not set
-# SUPPORT_LD_DEBUG_EARLY is not set
 # UCLIBC_MALLOC_DEBUGGING is not set
-# UCLIBC_HAS_BACKTRACE is not set
 WARNINGS="-Wall"
 # EXTRA_WARNINGS is not set
