Improved PKGBUILD, running as root

--- a/ossec-hids.config
+++ b/ossec-hids.config
@@ -12,6 +12,7 @@ export DATABASE=sqlite
 export USE_INOTIFY=yes
 export PCRE2_SYSTEM=yes
 export USE_SYSTEMD=yes
+export ZLIB_SYSTEM=yes
 export CFLAGS="$CFLAGS -fcommon"
 # compilation parameters, reverted in package() to avoid errors
 export OSSEC_GROUP=ossec
