Improved PKGBUILD, running as root

--- a/ossec-hids.config
+++ b/ossec-hids.config
@@ -12,12 +12,13 @@ export DATABASE=sqlite
 export USE_INOTIFY=yes
 export PCRE2_SYSTEM=yes
 export USE_SYSTEMD=yes
+export ZLIB_SYSTEM=yes
 export CFLAGS="$CFLAGS -fcommon"
 # compilation parameters, reverted in package() to avoid errors
-export OSSEC_GROUP=ossec
-export OSSEC_USER=ossec
-export OSSEC_USER_MAIL=ossec
-export OSSEC_USER_REM=ossec
+export OSSEC_GROUP=root
+export OSSEC_USER=root
+export OSSEC_USER_MAIL=root
+export OSSEC_USER_REM=root
 
 # Do you want to update it? (y/n) [y]:
 export USER_UPDATE=y
