Adjust service file to load site-packages from /opt
This sets the PYTHONUSERBASE variable to load site-packages from
/opt/moonraker/lib/... I wasn't able to find a cleaner solution
unfortunately. Really, this package should be migrated out of /opt, but
I don't want to deal with the /var/opt -> /var move.

--- a/moonraker.service
+++ b/moonraker.service
@@ -10,6 +10,7 @@ SupplementaryGroups=moonraker-admin
 SyslogIdentifier=moonraker
 RemainAfterExit=yes
 EnvironmentFile=/var/opt/moonraker/systemd/moonraker.env
+Environment=PYTHONUSERBASE=/opt/moonraker
 ExecStart=/usr/bin/python -m moonraker -n $MOONRAKER_ARGS
 Restart=always
 RestartSec=10
