--- a/com.ayugram.desktop.desktop
+++ b/com.ayugram.desktop.desktop
@@ -5,7 +5,7 @@ Name=AyuGram Desktop
 Comment=Unofficial desktop version of Telegram messaging app
 Exec=ayugram-desktop -- %u
 StartupWMClass=ayugram-desktop
-Icon=telegram
+Icon=ayugram
 Terminal=false
 Type=Application
 Categories=Network;
