--- a/phantomsocks.service
+++ b/phantomsocks.service
@@ -4,13 +4,9 @@ Wants=network-online.target
 After=network-online.target
 
 [Service]
-Type=simple
-Group=phantomsocks
-WorkingDirectory=/etc/phantomsocks
-ExecStart=/usr/bin/phantomsocks
-Restart=on-abnormal
+ExecStart=/usr/bin/phantomsocks-init
+Restart=on-failure
 RestartSec=5
 
 [Install]
-WantedBy=multi-user.target
-Alias=
+WantedBy=default.target
