--- a/nextdns.service
+++ b/nextdns.service
@@ -14,6 +14,7 @@ RestartSec=120
 LimitMEMLOCK=infinity
 Type=simple
 User=nextdns
+UMask=0007
 AmbientCapabilities=CAP_NET_BIND_SERVICE
 CapabilityBoundingSet=CAP_NET_BIND_SERVICE
 
